# hermes-mail

./: Cargo.toml  README.md  flake.nix
crates/cli/: Cargo.toml
crates/cli/src/: cmd.rs  logging.rs  main.rs
crates/cli/src/cmd/: config.rs
crates/csv/: Cargo.toml
crates/csv/src/: lib.rs
crates/logger/: Cargo.toml
crates/logger/src/: lib.rs
crates/mailer/: Cargo.toml
crates/mailer/src/: block_checker.rs  block_query.rs  data.rs  lib.rs  mailer.rs  queue.rs  stats.rs  websocket.rs
crates/mailer/src/block_query/: imap_query.rs
crates/mailer/src/mailer/: builder.rs  task.rs
crates/mailer/src/queue/: task.rs
crates/messaging/: Cargo.toml
crates/messaging/src/: amqp.rs  kafka.rs  lib.rs  stats.rs  websocket.rs
