[workspace]
resolver = "2"

[workspace.package]
authors = ["devsheke <abhi@sheke.tech>"]
description = "A lightweight CLI tool for sending bulk emails quickly and securely through SMTP"
homepage = "https://github.com/devsheke/hermes-mailer"
repository = "https://github.com/devsheke/hermes-mailer"
categories = ["mail-tools", "bulk-mailer", "command-line"]
license = "GPL-3.0"
rust-version = "1.82.1"
