[package]
name = "hermes-logger"
version = "0.1.0"
edition = "2021"
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["json", "chrono"] }
tracing-indicatif = "0.3.6"
thiserror = "1.0.63"
