[package]
name = "hermes-messaging"
version = "0.1.0"
edition = "2021"
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
crossbeam-channel = "0.5.13"
futures = "0.3.30"
futures-channel = "0.3.30"
futures-util = "0.3.30"
serde = "1.0.208"
serde_json = "1.0.125"
tokio = { version = "1.39.3", features = ["full"] }
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
tracing = "0.1.40"
chrono = "0.4.38"
lapin = "2.5.0"
deadpool-lapin = "0.12.1"
thiserror = "1.0.66"
